[package]
name = "newuser-uiext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
intercom = "0.4.0"
log = "0.4"
simple-logging = "2.0"
windows = { version = "0.48.0", features = [ "Win32_Networking_ActiveDirectory", "Win32_UI_Controls", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader" ] }

[build_dependencies]
winres = "0.1"